--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_SENDER = 'newlifeforissam@gmail.com'
-EMAIL_PASSWORD = "zkzaluyzfubkwgoe"
+EMAIL_SENDER = 'Your email'
+EMAIL_PASSWORD = "Your 16 characters password"
